# EventHandling

./: .gitignore  CMakeLists.txt  EventHandling.sln  Readme.md  main.cpp
.github/workflows/: cmake.yml
EventHandling/: CMakeLists.txt  EventHandling.vcxproj  EventHandling.vcxproj.filters  delegate.hpp  delegate_base.h  delegate_executor.hpp  delegate_internal_executor.hpp  delegate_invoke_type.h  delegate_parameters.hpp  event.hpp  event_handler.hpp  event_system.cpp  event_system.h  eventhandler.hpp  eventhandling.h  invoke_type.h  main.cpp  multicast_delegate.hpp  multicastdelegate.hpp  task.cpp  task.hpp  thread.cpp  thread.hpp
EventHandling/events/: eventhandling.h
EventHandling/events/delegates/: delegate.hpp  multicastdelegate.hpp
EventHandling/events/events/: event.hpp  eventhandler.hpp
EventHandling/events/holders/: holder.hpp
EventHandling/utils/: argument_pack.hpp  callback_queue.hpp  callback_queue_base.hpp  helper.hpp  holder.hpp  invocable_element.hpp  ptr.hpp  result_store.hpp  wrapped_call.hpp
tests/: CMakeLists.txt  test_argument_pack.cpp  test_delegate.cpp  test_delegate_executor.cpp  test_events.cpp  test_internal_executor.cpp  test_invocable.cpp  test_wrapped_call.cpp  tests.cpp  util_functions.h
